--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,12 @@
+<div class="center hero-unit">
 
-
-<h1>Sample App</h1>
+<h1>Welcome to the Sample App</h1>
 <p>
  This is the home page form the
  <a href="#">Ruby</ap>
 </p>
+
+<%= link_to "Sign up now!", '#', class: "btn btn-larg btn-primary"%>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
