typo fix on home page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,8 +2,8 @@
 
 <h1>Welcome to the Sample App</h1>
 <p>
- This is the home page form the
- <a href="#">Ruby</ap>
+ This is the home page from the
+ <a href="#">Ruby Tutorial</ap>
 </p>
 
 <%= link_to "Sign up now!", '#', class: "btn btn-larg btn-primary"%>
